--- a/debian/rules
+++ b/debian/rules
@@ -14,9 +14,9 @@ binary-arch: build
 	install -d debian/tmp/DEBIAN
 	install -d debian/tmp/etc/modprobe.d
 	install -d debian/tmp/etc/skel
-	install -d debian/tmp/lib/systemd/system
+	install -d debian/tmp/lib/systemd/system-sleep
 	install -p -m 644 etc/modprobe.d/* debian/tmp/etc/modprobe.d
-	install -p -m 644 lib/systemd/system/* debian/tmp/lib/systemd/system
+	install -p -m 755 lib/systemd/system-sleep/* debian/tmp/lib/systemd/system-sleep
 	cp -r etc/skel debian/tmp/etc
 	dpkg-gencontrol -pgalliumos-device-c710
 	dpkg-deb --build -Zgzip debian/tmp ..
