--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,7 @@
 Source: galliumos-sandy
 Section: admin
 Priority: required
-Maintainer: Hugh Greenberg <hugh@galliumos.org>
-XSBC-Original-Maintainer: Hugh Greenberg <hugh@galliumos.org>
+Maintainer: GalliumOS <galliumos@galliumos.org>
 Standards-Version: 3.9.1
 
 Package: galliumos-sandy
